--- a/index.html
+++ b/index.html
@@ -88,38 +88,35 @@
   </nav>
   
   <!-- Contenido principal -->
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-10 info-proges">
-       <!-- <h1 class="text-center text-primary">PROGES</h1><br> -->
-        <div style="text-align: center;">
-          <img src="LogoOriginalPROGES.jpg" alt="LogoOriginalPROGES" width="400">
-        </div>
-        
-        <h2 class="text-secondary">Identidad</h2>
-        <p>
-          Quienes formamos parte del equipo PROGES nos consideramos profesionales de la educación interesados en conocer, registrar e intercambiar saberes y experiencias asociadas a los procesos de innovación y cambio educativo. 
-        </p>
-        <p>Nos interesa promover espacios para la participación activa de quienes se sientan convocados a ser parte de las líneas en las que venimos trabajando. Nuestro accionar profesional se orienta en los siguientes principios:</p>
-        <ul>
-          <li><strong>Ética</strong> - atendiendo al conjunto de normas y valores que hacen al quehacer profesional.</li>
-          <li><strong>Colaboración</strong> - poniendo énfasis en prácticas colaborativas que enriquezcan los procesos formativos, de investigación y de desarrollo profesional.</li>
-          <li><strong>Independencia</strong> - teniendo en cuenta que la pertenencia a este equipo queda regulada por la línea de actividad a la que se integre cada persona...</li>
-          <li><strong>Respeto</strong> - cuidando atender a las distintas opiniones, buscando integrar visiones en función de objetivos comunes.</li>
-        </ul>
-        <h2 class="text-secondary">Marco de actuación</h2>
-        <p>
-          Este equipo tiene como denominador común el contar con experiencia en temas de gestión educativa y pertenecer a la Red de Apoyo a la Gestión Educativa (RedAGE), como clúster especializado en estas temáticas.
-        </p>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-10 info-proges">
+      <!-- Logo centrado con efecto hover -->
+      <div class="text-center mb-4">
+        <img src="LogoOriginalPROGES.jpg" 
+             alt="LogoOriginalPROGES" 
+             style="width: 520px; max-width: 100%; height: auto; border-radius: 20px; 
+                    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+                    transition: transform 0.3s ease, box-shadow 0.3s ease;"
+             onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 6px 20px rgba(0,0,0,0.2)';"
+             onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 15px rgba(0,0,0,0.15)';">
       </div>
+
+      <h2 class="text-secondary">Identidad</h2>
+      <p>
+        Quienes formamos parte del equipo PROGES nos consideramos profesionales de la educación interesados en conocer, registrar e intercambiar saberes y experiencias asociadas a los procesos de innovación y cambio educativo. 
+      </p>
+      <p>Nos interesa promover espacios para la participación activa de quienes se sientan convocados a ser parte de las líneas en las que venimos trabajando. Nuestro accionar profesional se orienta en los siguientes principios:</p>
+      <ul>
+        <li><strong>Ética</strong> - atendiendo al conjunto de normas y valores que hacen al quehacer profesional.</li>
+        <li><strong>Colaboración</strong> - poniendo énfasis en prácticas colaborativas que enriquezcan los procesos formativos, de investigación y de desarrollo profesional.</li>
+        <li><strong>Independencia</strong> - teniendo en cuenta que la pertenencia a este equipo queda regulada por la línea de actividad a la que se integre cada persona.</li>
+        <li><strong>Respeto</strong> - cuidando atender a las distintas opiniones, buscando integrar visiones en función de objetivos comunes.</li>
+      </ul>
+      <h2 class="text-secondary">Marco de actuación</h2>
+      <p>
+        Este equipo tiene como denominador común el contar con experiencia en temas de gestión educativa y pertenecer a la Red de Apoyo a la Gestión Educativa (RedAGE), como clúster especializado en estas temáticas.
+      </p>
     </div>
   </div>
-  
-  <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-<footer>
-  <p class="firma">© 2025 | Desarrollado por Valentina Vázquez</p>
-</footer>
-</html>
-
+</div>
