--- a/integrantes.html
+++ b/integrantes.html
@@ -62,7 +62,7 @@
                 María Inés Vázquez Clavera <span class="subtitulo">(Coordinadora)</span>
             </h3>            
             <p class="card-text">
-              Doctora en Educación (UAB/España) y Psicóloga (UdelaR/ Uruguay). Integra el Sistema Nacional de Investigadores desde hace más de una década. Se desempeña como investigadora-evaluadora de la Agencia Nacional de Investigación e Innovación del Consejo Nacional de Ciencia y Tecnología (CONACYT) de Paraguay. Es colaboradora oficial del Equipo de investigación sobre Desarrollo Organizacional (EDO), de la Universidad Autónoma de Barcelona. Coordina el equipo de investigación asociado a RedAGE, PROGES. Dirige la publicación semestral GestionArte, revista especializada en temas de Gestión educativa. Integra el Comité Ejecutivo de Red Internacional de Apoyo a la Gestión Educativa (RedAGE). Actualmente se desempeña como Coordinadora Académica del Instituto Universitario Elbio Fernández.
+              Doctora en Educación (UAB/España) y Psicóloga (UdelaR/ Uruguay). Integra el Sistema Nacional de Investigadores desde hace más de una década. Se desempeña como investigadora-evaluadora de la Agencia Nacional de Investigación e Innovación del Consejo Nacional de Ciencia y Tecnología (CONACYT) de Paraguay. Es colaboradora oficial del Equipo de investigación sobre Desarrollo Organizacional (EDO), de la Universidad Autónoma de Barcelona. Coordina el equipo de investigación asociado a RedAGE, PROGES. Dirige la publicación semestral GestionArte, revista especializada en temas de Gestión educativa. Integra el Comité Ejecutivo de Red Internacional de Apoyo a la Gestión Educativa (RedAGE).
             </p>
           </div>
         </div>
@@ -177,8 +177,40 @@ Formo parte de PROGES, grupo de investigación que integra la Revista RedAge Uru
     </div>
   </div>
 </div>
-
 </div>
+
+<h2 class="text-center text-primary mt-5 mb-4">Colaboradores</h2>
+
+
+<!-- Integrante: Valentina Vázquez -->
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col d-flex">
+    <div class="card h-100 w-100">
+      <div class="card-body d-flex flex-column">
+        <div class="d-flex justify-content-center">
+          <img src="ValentinaVazquez.jpg.jpg"
+               alt="Valentina Vázquez" 
+               class="rounded-circle" 
+               style="width:150px; height:150px; object-fit: cover; object-position: center;">
+        </div>
+
+        <h3 class="card-title mt-3 text-center">
+  Valentina Vázquez 
+  <span class="subtitulo" style="display:block; font-size:0.9rem; color:gray;">
+    (Programadora de página PROGES)
+  </span>
+</h3>
+        <p class="card-text">
+          Estudiante de Programación en Ceibal, donde ha participado en proyectos grupales, destacándose en el desarrollo de una página e-commerce colaborativa. 
+          Actualmente trabaja en el área de Soporte IT de Pagnifique, combinando su formación técnica con la experiencia práctica en entornos laborales. 
+          Se interesa por la creación de soluciones digitales que optimicen procesos y mejoren la experiencia del usuario.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 </div>
   </main>
