--- a/investigación.html
+++ b/investigación.html
@@ -46,8 +46,101 @@
       <p>La permanencia de prácticas solitarias a nivel del aula o de los espacios de gestión, dificultan que el conocimiento que se genera se registre, comparta y promueva la reflexión colectiva de los equipos institucionales. Resulta complejo generar visiones integradoras desde prácticas cubiculares.</p>
       <p>El conocimiento requiere ser gestionado, a partir de roles activos de liderazgo que promuevan procesos de autorrevisión y autoevaluación personales y colectivos, que habiliten a la creación de nuevos conocimientos. Resulta fundamental promover procesos de aprendizaje y reflexión colectivos, que permitan instalar nuevas dinámicas integradoras de los procesos de innovación y mejora.</p>
       <p>Esta perspectiva resulta viable para consolidar culturas colaborativas y comunidades de aprendizaje. Sin estas bases integradas a la cultura de las organizaciones educativas, se vuelve complejo pensar procesos colectivos desde miradas que permanecen jerarquizando puntos de vista individuales.</p>
-    </section>
+
+<h2 class="text-primary">Modelo PROGES</h2>
+
+<p>Modelo de gestión de mejora educativa PROGES</p>
+
+<ol>
+  <li>
+    <strong>Propósito del Modelo</strong><br>
+    Este modelo es presentado teniendo en cuenta un conjunto de preguntas orientadoras que integran una modalidad de comunicación creada por Harold Lasswell (1958; 1968)<sup>1,2</sup>, a modo de lista de control en la definición del Modelo de gestión de la mejora educativa, PROGES.<br><br>
+    Iniciamos con la primera pregunta que refiere a ¿qué cambiar? El propósito de este modelo es hacer foco en aquellos aspectos del escenario educativo, sobre los cuales se siente la necesidad de actuar, generando procesos de innovación o mejora. Partimos del supuesto de que las dinámicas de las organizaciones educativas son cambiantes y de alta complejidad, por lo que requieren de perspectivas integradoras que articulen aquellos factores implicados en dichos procesos.
+   <div class="text-center my-4">
+    <img src="modelo PROGES IMAGEN.PNG" alt="Modelo PROGES" 
+      style="width: 700px; max-width: 100%; height: auto; border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.2); transition: transform 0.3s ease;"
+      onmouseover="this.style.transform='scale(1.05)';" 
+      onmouseout="this.style.transform='scale(1)';">
+  </div>
+  </li>
+
+  <li>
+    <strong>¿Por qué cambiar?</strong><br>
+    Esta respuesta se define con la opinión de los implicados en la organización, que son quienes definen las temáticas sobre las cuales sienten necesidad de trabajar para pasar a una nueva fase que pueda asociarse con la mejora o el cambio a partir de una innovación. De allí la importancia de definir este modelo en el marco de una fase inicial de aproximación diagnóstica, que permita identificar estos aspectos con claridad.
+  </li>
+
+  <li>
+    <strong>¿Cuándo, dónde y quién implementará el cambio?</strong><br>
+    En cuanto a ¿cuándo iniciar el cambio?, se define en acuerdo con la organización educativa, una vez que ambas partes establezcan y aseguren las condiciones básicas para iniciar el proceso de asesoría. En relación a ¿dónde aplicar el cambio?, se definirá en acuerdo con los implicados una vez que se haya completado la fase diagnóstica y se hayan definido el o los aspectos que serán abordados en el proceso de innovación o cambio. En cuanto a ¿quién/es implementará/n los procesos previstos?, se definirá una “estructura espejo” entre integrantes del equipo PROGES e integrantes del escenario educativo implicados, decisión que deberá contar con el aval de las autoridades de la organización educativa. Finalmente, atendiendo a ¿cómo se va a realizar la innovación o cambio?, este aspecto operativo será presentado ante los responsables organizacionales al finalizar la etapa diagnóstica, especificando posibles alternativas para la mejora.
+  </li>
+
+  <li>
+    <strong>Características y principios (marco lógico)</strong><br>
+    Este modelo es definido como integral, estratégico y focalizado en la mejora educativa. Integral, dado que procura operar desde una perspectiva global y holística del escenario educativo en estudio. Estratégico, dado que toma en cuenta las fortalezas del escenario educativo en estudio para trabajar desde allí otros aspectos considerados débiles o necesitados de revisión. Focalizado en la mejora educativa, considerando como fundamental no pretender abarcar todas las dinámicas propias de escenarios complejos, sino aquellos aspectos que se relacionen con las temáticas definidas con la institución como prioritarias para la revisión y el cambio.
+  </li>
+
+  <li>
+    <strong>Componentes: líneas, dimensiones, indicadores</strong><br>
+    Las líneas desde las cuales viene trabajando PROGES para analizar y comprender las dinámicas y lógicas de los escenarios educativos, son dos: (i) la transición entre modelos educativos y (ii) los procesos de creación y gestión del conocimiento. La búsqueda sistemática de referencias bibliográficas sobre procesos de innovación y cambio confirma que estamos en un momento histórico donde las estructuras organizacionales se ven interpeladas a revisar la forma en que organizan sus equipos y definen las logísticas que los articulan en el accionar diario.
+  </li>
+
+  <li>
+    <strong>Destinatarios</strong><br>
+    Este modelo ha sido pensado para ser aplicado en distintos escenarios educativos, tanto públicos como privados; formales como no formales. El factor más relevante es que exista motivación para emprender y transitar por procesos de innovación y cambio.
+  </li>
+
+  <li>
+    <strong>Fases de aplicación</strong><br>
+    Las fases previstas en el proceso inicial de acompañamiento en la gestión de la mejora organizacional se completan dentro de un plazo máximo de 60 días. Se podrá acordar la modalidad de acompañamiento: presencial, virtual o híbrida. Los encuentros con representantes del equipo tendrán una periodicidad semanal, que será coordinada con el referente organizacional que designe el centro.
+  </li>
+
+  <li>
+    <strong>Impacto esperado</strong><br>
+    Luego de transitar por el proceso de gestión de la mejora educativa propuesto a partir del Modelo PROGES, la organización contará con competencias y estrategias para: definir procesos prioritarios, reorganizar aspectos estructurales de la organización, sistematizar registros, instalar dinámicas colectivas que aporten a la participación y consolidar la confianza colectiva.
+  </li>
+
+  <li>
+    <strong>Listas de verificación</strong><br>
+    Las listas de verificación con las que se trabaja son dos: una que aporta como analizador del cambio desde la perspectiva transición entre modelos y la otra desde la óptica de gestión del conocimiento; elaboradas y validadas con expertos internacionales en 2023.
+  </li>
+</ol>
+
+<p>
+<sup>1</sup> <a href="https://progesequipo.com/index.html">https://progesequipo.com/index.html</a><br>
+<sup>2</sup> Lasswell, H. D. (1958). Communications as an emerging discipline. Audio Visual Communication Review, 6, 245–254. Lasswell, H. D. (1968). The uses of content analysis data in studying social change. Social Science Information, 7, 57–70.
+</p>
+
+<h2 class="text-primary">Repositorio de lecturas</h2>
+<p>A continuación se presentan las referencias bibliográficas utilizadas para fundamentar las líneas de investigación y el Modelo PROGES.</p>
+
+<h3 class="text-secondary">1. Gestión del Conocimiento</h3>
+<ol>
+  <li>Correia de Almeida, L. F. (2025). The Galileo institutional repository as an information stock in the training of masters and doctorates focused on Industry 4.0 in the Amazon. <em>Journal of Engineering and Technology for Industrial Applications, 11(54), 60–66.</em> <a href="https://itegam-jetia.org/journal/index.php/jetia/article/view/1711">https://itegam-jetia.org/journal/index.php/jetia/article/view/1711</a></li>
+  <li>Febriantina, S., Wibowo, A., & Wolor, C. W. (2025). Fostering lecturer’s innovative work behavior: The role of transformational leadership, interpersonal trust, and knowledge sharing. <em>International Journal of Innovative Research and Scientific Studies, 8(2), 833–842.</em> <a href="https://doi.org/10.53894/ijirss.v8i2.5335">https://doi.org/10.53894/ijirss.v8i2.5335</a></li>
+  <li>Gairín Sallán, J. (2008). La gestión del conocimiento de los directivos: La experiencia virtual de la Red Atenea. <em>Avances en Supervisión Educativa, (8), 1–14.</em> <a href="https://avances.adide.org/index.php/ase/article/view/323">https://avances.adide.org/index.php/ase/article/view/323</a></li>
+  <li>Gairín Sallán, J., Muñoz, J. L., & Rodríguez Gómez, D. (2009). Estadios organizativos y gestión del conocimiento. <em>Revista de Ciencias Sociales (RCS), 15(4), 620-632.</em> <a href="https://www.redalyc.org/articulo.oa?id=28012285005">https://www.redalyc.org/articulo.oa?id=28012285005</a></li>
+  <li>Gairín Sallán, J., & Rodríguez-Gómez, D. (2012). El modelo Accelera de creación y gestión del conocimiento en el ámbito educativo. <em>Revista de Educación, 357, 633–646.</em> <a href="https://doi.org/10.4438/1988-592X-RE-2011-357-133">https://doi.org/10.4438/1988-592X-RE-2011-357-133</a></li>
+  <li>Gairín Sallán, J., Suárez, C., & Díaz-Vicario, A. (2020). La nueva gestión del conocimiento. Wolters Kluwer, S.A.</li>
+  <li>He, L. (2025). Knowledge sharing behavior of nursing educators: Influence of organizational culture and technological environment. <em>International Journal of Knowledge Management, 21(1), 1–17.</em> <a href="https://doi.org/10.4018/IJKM.380660">https://doi.org/10.4018/IJKM.380660</a></li>
+  <li>Minakata Arceo, A. (2009). Gestión del conocimiento en educación y transformación de la escuela: Notas para un campo en construcción. <em>Sinéctica, (32), 17-19.</em> <a href="http://www.scielo.org.mx/scielo.php?script=sci_arttext&amp;pid=S1665-109X2009000100008&amp;lng=es&amp;tlng=es">http://www.scielo.org.mx/scielo.php?script=sci_arttext&amp;pid=S1665-109X2009000100008&amp;lng=es&amp;tlng=es</a></li>
+  <li>Villasana Arreguín, L. M., Hernández García, P., & Ramírez Flores, E. (2021). La gestión del conocimiento, pasado, presente y futuro. Una revisión de la literatura. <em>Revista Trascender, Contabilidad y Gestión, 6(18), 1-21.</em> <a href="https://trascender.unison.mx/index.php/trascender/article/view/128">https://trascender.unison.mx/index.php/trascender/article/view/128</a></li>
+</ol>
+
+<h3 class="text-secondary">2. Transición entre Modelos</h3>
+<ol>
+  <li>Allam, H., Dempere, J., Kalota, F., & Hua, D. (2024). Enhancing educational continuity: Exploring factors affecting the success of learning management systems in Dubai higher education. <em>Frontiers in Education, 9, 1382021.</em> <a href="https://doi.org/10.3389/feduc.2024.1382021">https://doi.org/10.3389/feduc.2024.1382021</a></li>
+  <li>Alkhnbashi, O. S., Mohammad, R., & Bamasoud, D. M. (2024). Education in transition: Adapting and thriving in a post-COVID world. <em>Systems, 12(10), 402.</em> <a href="https://doi.org/10.3390/systems12100402">https://doi.org/10.3390/systems12100402</a></li>
+  <li>Araya Leal, S., Díaz Jara, J., Espinoza Barrios, M., & Rojas-Serey, A. M. (2024). Desarrollo de un modelo de innovación curricular basado en competencias para especialidades médicas: Experiencia del programa de radiología de una universidad chilena. <em>Revista Médica de Chile, 152(12), 1209–1218.</em> <a href="https://doi.org/10.4067/s0034-98872024001201209">https://doi.org/10.4067/s0034-98872024001201209</a></li>
+  <li>Kizim, S., Voloshyna, O., Bondarchuk, L., Sapohov, M., & Melnychuk, T. (2025). Innovative approaches to the organization of distance learning with the use of digital technologies in domestic and international educational practices. <em>Environment. Technology. Resources. Proceedings of the International Scientific and Practical Conference, 2, 197–203.</em> <a href="https://doi.org/10.17770/etr2025vol2.8605">https://doi.org/10.17770/etr2025vol2.8605</a></li>
+  <li>Kovalchuk, V., Kovalchuk, A., Vovk, B., Derevyanchuk, O., & Rozhkov, O. (2025). Model of digitalization professional training of future vocational education teachers. <em>Environment. Technology. Resources. Proceedings of the International Scientific and Practical Conference, 3, 195–201.</em> <a href="https://doi.org/10.17770/etr2025vol3.8560">https://doi.org/10.17770/etr2025vol3.8560</a></li>
+  <li>Kreis, Y., Haas, B., Weinhandl, R., & Lavicza, Z. (2024). Transitioning from lectures to online flipped classrooms: Enhancing pre-service teacher education in Luxembourg. <em>Cogent Education, 11(1).</em> <a href="https://doi.org/10.1080/2331186X.2024.2425895">https://doi.org/10.1080/2331186X.2024.2425895</a></li>
+  <li>Larty, J., & Hodgson, V. (2024). An exploration of the ideological becoming of online educators. <em>British Journal of Educational Technology, 55, 139–155.</em> <a href="https://doi.org/10.1111/bjet.13331">https://doi.org/10.1111/bjet.13331</a></li>
+  <li>Masoumian Hosseini, S. T., Qayumi, K., Pourabbasi, A., Haghighi, E., Sabet, B., Koohpaei, A., Shafiei, Z., Masoumian Hosseini, M., & Nemati, P. (2025). Are we ready to integrate modern technologies into the medical curriculum for students: A systematic review. <em>Discover Education, 4, 114.</em> <a href="https://doi.org/10.1007/s44217-025-00521-7">https://doi.org/10.1007/s44217-025-00521-7</a></li>
+  <li>Vila Soriano, R., & Monsalve Lorente, L. (2025). El reto de implementar el modelo HIP a la educación secundaria: la democratización del IES Moixent. <em>European Public & Social Innovation Review, 10, 1–21.</em> <a href="https://doi.org/10.31637/epsir-2025-1613">https://doi.org/10.31637/epsir-2025-1613</a></li>
+</ol>
+
   </main>
+
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
